--- a/src/assets/scss/components/breakpoints.scss
+++ b/src/assets/scss/components/breakpoints.scss
@@ -172,6 +172,18 @@
   footer ul {
     width: 100%;
   }
+
+  .text-image .full-image-text-image {
+    height: 350px;
+  left: 0;
+  width: 100%;
+  border-radius: 0px;
+  bottom: 0;
+  top: initial;
+  z-index: 1;
+  }
+
+  
 }
 
 
