--- a/src/assets/scss/ppp-components/typography.scss
+++ b/src/assets/scss/ppp-components/typography.scss
@@ -34,7 +34,7 @@ h2 {
     color: black;
     font-size: 58px;
     line-height: 62px;
-    margin-bottom: 1em;
+    margin-bottom: 30px;
 }
 
 h3 {
