--- a/src/assets/scss/ppp-components/image-text.scss
+++ b/src/assets/scss/ppp-components/image-text.scss
@@ -34,6 +34,12 @@
         color: $primary-color !important;
     }
 
+    &.hide-circles {
+        .small-circle, .medium-circle {
+            display: none !important;
+        }
+    }
+
 
 
     &.pink {
