js fixes and swiper css

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -81,6 +81,7 @@
 @import 'ppp-components/tiles-ulster';
 @import 'ppp-components/tiles';
 @import 'ppp-components/video';
+@import 'ppp-components/slider';
 
 // Breakpoint
 @import 'components/breakpoints';
