--- a/src/layouts/live.html
+++ b/src/layouts/live.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
     <script src="https://kit.fontawesome.com/a63572f4f3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.4/swiper-bundle.css" integrity="sha512-wbWvHguVvzF+YVRdi8jOHFkXFpg7Pabs9NxwNJjEEOjiaEgjoLn6j5+rPzEqIwIroYUMxQTQahy+te87XQStuA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
@@ -25,6 +26,9 @@
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <!-- <script nonce="142eec7b7456f11f81a31a9b072a08d03d99c186b4c96d80854dd27e76d8cc9e21960eebda52e962" src="https://www.ulster.ac.uk/__data/assets/git_bridge/0004/1094035/dist/assets/js/app.js?h=42baf21&v=1.1.7.21" defer></script> -->
+
+<script nonce="142eec7b7456f11f81a31a9b072a08d03d99c186b4c96d80854dd27e76d8cc9e21960eebda52e962" src="https://www.ulster.ac.uk/__data/assets/git_bridge/0004/1094035/dist/assets/js/app.js?h=42baf21&v=1.1.7.21" defer></script>
+
 <script src="{{root}}assets/js/app.js"></script>
 </body>
 </html>
