--- a/src/assets/scss/ppp-components/buttons.scss
+++ b/src/assets/scss/ppp-components/buttons.scss
@@ -50,6 +50,11 @@
     &:focus, &:active {
         text-decoration: underline;
         background-color: rgba(0,0,0,0);
+        color: black;
+
+        &::after {
+            background-color: $brand-pink !important;
+        }
 
     }
 }
