button focus state

--- a/src/assets/scss/ppp-components/hero.scss
+++ b/src/assets/scss/ppp-components/hero.scss
@@ -113,7 +113,7 @@
     }
 }
 
-.Startegy-page, .strategy-page {
+.Strategy-page, .strategy-page {
     .hero {
         .button {
             display: block;
