line down position

--- a/src/assets/scss/components/breakpoints.scss
+++ b/src/assets/scss/components/breakpoints.scss
@@ -434,4 +434,14 @@ header #nav-icon3 {
 .fixed-header {
   height: 88px;
 }
+
+.interactive-button {
+  order: 3;
+  text-align: left;
+  margin-top: 2em;
+}
+
+blockquote, blockquote p {
+  padding-right: 0px !important;
+}
 }
