--- a/src/assets/scss/ppp-components/video.scss
+++ b/src/assets/scss/ppp-components/video.scss
@@ -114,7 +114,7 @@
       position: absolute;
       bottom: 0;
       left: 0em;
-      bottom: 0em;
+      top: 2em;
       
       width: 102px;
       height: 111px;
