--- a/src/assets/scss/ppp-components/buttons.scss
+++ b/src/assets/scss/ppp-components/buttons.scss
@@ -48,13 +48,16 @@
     }
 
     &:focus, &:active {
-        text-decoration: underline;
         background-color: rgba(0,0,0,0);
-        color: black;
-
-        &::after {
-            background-color: $brand-pink !important;
-        }
+        color: white;
+        transition: color 0.5s ease;
+ 
+         &::before {
+             width: 100%;
+             background-color: $primary-color;
+             transition: width 0.5s ease;
+            
+         }
 
     }
 }
