--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -82,6 +82,7 @@
 @import 'ppp-components/tiles';
 @import 'ppp-components/video';
 @import 'ppp-components/slider';
+@import 'ppp-components/stats';
 
 // Breakpoint
 @import 'components/breakpoints';
