--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
         <nav role=”navigation” aria-label=”main-menu”>
           <ul class="">
             <li>
-              <a >Home</a>
+              <a class="is-active">Home</a>
               <ul class="drop-down" data-submenu>
                 <li>
                   <a href="">Sub Nav 1</a>
@@ -29,7 +29,7 @@
               </ul>
             </li>
             <li>
-              <a class="is-active" href="/">Strategy</a>
+              <a href="/">Strategy</a>
             </li>
             <li>
               <a href="/">In Action</a>
