--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -9,6 +9,10 @@ header {
   top: 0;
   height: 100px;
 
+  ul li {
+    position: relative;
+  }
+
 
 
 .logo {
@@ -58,24 +62,46 @@ header {
 
 }
 
+
 .drop-down {
-  position: absolute;
-      background-color: #0b1827;
-      padding: 20px 10px;
-      right: 0;
-      border-radius: 0px 0px 10px 10px;
-      width: 180px;
-      top: 61px;
-      display: none;
+    position: absolute;
+    left: 1em;
+    right: 0;
+    width: 300px;
+    top: 40px;
+    background-color: #2a2d30;
+    padding: 10px 10px 30px;
+    background-color: darken($primary-color, 10%);
+    border-radius: 0px 10px 10px 10px;
+    display: none;
+
+    &::before {
+      content: "";
+    position: absolute;
+    width: 80px;
+    top: -75px;
+    height: 80px;
+    background-color: darken($primary-color, 10%);
+    left: 0;
+    z-index: -1;
+    border-radius: 50% 50% 0px 0px;
+    }
+      
+
+    &.hover-me {
+      display: block;
+    }
 
       li {
         display: block;
 
         a {
-          background-color: #434343;
+        
+          font-size: 15px !important;
 
           &:hover {
             border-bottom: 2px solid white;
+            color: $brand-pink;
           }
         }
       }
@@ -332,29 +358,15 @@ header {
 
 
 
-  header .drop-down {
-    right: auto;
-    left: initial !important;
-    right: 0 !important;
-    top: 66px;
-    border: 0px;
-    padding: 10px 0px;
-    width: 250px;
-}
 
 header nav .drop-down li a {
     color: #fff;
     text-transform: uppercase;
     font-size: 12px;
-  padding: 10px 0px 20px;
+  padding: 20px 0px 20px;
    
 
     display: block;
-    border-bottom: 1px solid #3e4956;
+    border-bottom: 1px solid $primary-color;
 }
 
-header nav .drop-down li:last-child {
-  a {
-    border-bottom: 0px;
-  }
-}
