--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -65,7 +65,7 @@ header {
 
 .drop-down {
     position: absolute;
-    left: 1em;
+    left: 1em !important;
     right: 0;
     width: 300px;
     top: 40px;
@@ -74,6 +74,8 @@ header {
     background-color: darken($primary-color, 10%);
     border-radius: 0px 10px 10px 10px;
     display: none;
+    border: 0px;
+    z-index: -1;
 
     &::before {
       content: "";
