--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,6 +33,14 @@
             </li>
             <li>
               <a href="/">In Action</a>
+              <ul class="drop-down" data-submenu>
+                <li>
+                  <a href="">Sub Nav 1</a>
+                </li>
+                <li>
+                  <a href="">Sub Nav 1</a>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="/">Resources</a>
