--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -65,9 +65,9 @@ header {
 
 .drop-down {
     position: absolute;
-    left: 1em !important;
+    left: 0em !important;
     right: 0;
-    width: 300px;
+    width: 380px;
     top: 40px;
     background-color: #2a2d30;
     padding: 10px 10px 30px;
@@ -81,7 +81,7 @@ header {
       content: "";
     position: absolute;
     width: 80px;
-    top: -75px;
+    top: -70px;
     height: 80px;
     background-color: darken($primary-color, 10%);
     left: 0;
@@ -96,13 +96,16 @@ header {
 
       li {
         display: block;
+        padding: 5px;
+        text-align: left;
+
 
         a {
         
           font-size: 15px !important;
 
           &:hover {
-            border-bottom: 2px solid white;
+            border-bottom: 1px solid white;
             color: $brand-pink;
           }
         }
