--- a/src/assets/scss/components/breakpoints.scss
+++ b/src/assets/scss/components/breakpoints.scss
@@ -118,6 +118,7 @@
   .strategy-tiles.people,
   .strategy-tiles.partnership {
     margin-top: 2em;
+    margin-bottom: 6em;
   }
 
   .strategy-tiles.partnership {
@@ -371,7 +372,7 @@ blockquote, p, .image-text ul li, .text-image ul li {
 }
 
 .strategy-tiles .title {
-  margin-top: -50px;
+  margin-top: -30px;
   margin-left: 64px;
 }
 
