--- a/src/assets/scss/components/breakpoints.scss
+++ b/src/assets/scss/components/breakpoints.scss
@@ -247,6 +247,12 @@
     margin-top: 10px !important;
   }
 
+  .strategy-tiles.people,
+  .strategy-tiles.partnership {
+    margin-top: 2em;
+    margin-bottom: 3em;
+  }
+
   header .logo {
     height: 62px;
     width: initial;
