--- a/src/assets/scss/ppp-components/tiles.scss
+++ b/src/assets/scss/ppp-components/tiles.scss
@@ -6,7 +6,8 @@
     margin-bottom: 3em;
 
     &.people {
-       margin-top: -10em;
+       margin-top: -5em;
+       margin-bottom: 5em;
 
        .title {
         margin-top: -90px;
