--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
           </div>
         </div>
         <nav role=”navigation” aria-label=”main-menu”>
-          <ul class="dropdown" data-dropdown-menu data-disable-hover-on-touch="true">
+          <ul class="dropdown" data-dropdown-menu data-disable-hover-on-touch="true" data-closing-time="200">
             <li>
               <a class="is-active">Home</a>
               <ul class="drop-down" data-submenu>
