drop down layout

--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -65,7 +65,7 @@ header {
 
 .drop-down {
     position: absolute;
-    left: 0em !important;
+    left: 20px !important;
     right: 0;
     width: 380px;
     top: 40px;
