--- a/src/assets/scss/ppp-components/image-text.scss
+++ b/src/assets/scss/ppp-components/image-text.scss
@@ -54,11 +54,12 @@
 
     blockquote {
         font-size: 20px;
+        color: darken($primary-color, 10%) !important;
     }
 
     blockquote p {
         font-size: 20px;
-        color: $primary-color !important;
+        color: darken($primary-color, 10%) !important;
     }
 
     &.hide-circles {
